# nn-observability

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  DATA.md  Dockerfile  MODELS.md  NOTICE  README.md  croissant.json  justfile  pyproject.toml
.github/workflows/: ci.yml  readme-smoke.yml
analysis/: README.md  __init__.py  ancova_family.py  exclusive_catch_rates.py  funnel_plot.py  generate_data_macros.py  generate_tables.py  held_out_split.py  lint_hardcoded.py  load_results.py  loocv_scaling.py  meta_regression.py  nonlinear_probe.py  nonlinear_probe_Llama-3.2-3B.json  nonlinear_probe_Llama_Multi-3.2-3B.json  nonlinear_probe_Qwen2.5-0.5B.json  nonlinear_probe_Qwen2.5-1.5B.json  nonlinear_probe_Qwen2.5-14B.json  nonlinear_probe_Qwen2.5-3B.json  nonlinear_probe_Qwen2.5-7B.json  nonlinear_probe_gemma-3-1b-pt.json  nonlinear_probe_gpt2.json  pearson_vs_spearman.py  permutation_test.py  run_all.py  selectivity.py  verify_numbers.py
analysis/scripts/: run_all_nonlinear.sh  split_bootstrap_gpu.py  wait_and_phi3.sh
assets/: README.md
assets/share/: README.md  preview_sources.json
figures/: fig_cross_family.py  fig_downstream_ceiling.py  fig_exdim.py  fig_layer_profiles.py  fig_llama_cliff.py  fig_waterfall.py  generate_all.py  style.py
notebooks/: README.md  colab_nonlinear_probe_llama3b.ipynb  colab_nonlinear_probe_pythia_1_4b.ipynb  cross_domain_qwen.ipynb  gemma_diagnostic.ipynb  llama3b_comprehensive_v2.ipynb  llama8b_comprehensive.ipynb  phase9_colab.ipynb  qwen05b_auxiliary_loss.ipynb  qwen05b_base_instruct_v3.ipynb  qwen14b_comprehensive.ipynb  qwen14b_comprehensive_v4.ipynb  qwen14b_hardening.ipynb  qwen14b_instruct.ipynb  qwen3b_base_instruct_v3.ipynb  qwen7b_base_instruct_v2.ipynb  qwen7b_comprehensive.ipynb  qwen7b_mechanistic.ipynb  qwen7b_selective_prediction3.ipynb  walkthrough_analysis.ipynb
reports/: README.md  figure_sources.json  paper_values.json  scopes.json
results/: README.md  auxiliary_loss_results.json  bottleneck_scaling.json  comprehensive_v3_results.json  cross_family.json  dataset_revisions.json  gemma3_1b_results.json  gemma4b_results.json  gemma4b_v3_results.json  llama1b_instruct_results.json  llama1b_results.json  llama3b_diagnostic.json  llama3b_v2_results.json  llama3b_v3_results.json  llama8b_comprehensive.json  llama8b_results.json  llama8b_v3_results.json  mechanistic_7b.json  mechanistic_llama_comparison.json  mechanistic_mistral.json  medqa_selective_mistral7b_instruct_results.json  medqa_selective_phi3_mini_instruct_results.json  medqa_selective_qwen7b_instruct_L17_results.json  medqa_selective_qwen7b_instruct_L18_results.json  medqa_selective_qwen7b_instruct_L19_results.json  mistral-7b-instruct-v0.3_medqa.json  mistral-7b-instruct-v0.3_squad-rag.json  mistral-7b-instruct-v0.3_truthfulqa.json  mistral7b_instruct_v3_results.json  mistral7b_results.json  model_revisions.json  nonlinear_probe_Llama-3.2-3B.json  nonlinear_probe_Llama_Multi-3.2-3B.json  nonlinear_probe_Qwen2.5-0.5B.json  nonlinear_probe_Qwen2.5-1.5B.json  nonlinear_probe_Qwen2.5-14B.json  nonlinear_probe_Qwen2.5-3B.json  nonlinear_probe_Qwen2.5-7B.json  nonlinear_probe_gemma-3-1b-pt.json  nonlinear_probe_pythia-1.4b.json  (+57 more)
results/manifest_verification/: 2026-05-07.json  2026-05-09.json  2026-05-12.json
schema/: README.md  bootstrap.schema.json  downstream.schema.json  dynamics.schema.json  legacy.schema.json  main.schema.json  mechanistic.schema.json  nonlinear-probe.schema.json  residualizer-split.schema.json  shuffle-control.schema.json  width-sweep.schema.json
scripts/: README.md  auxiliary_loss.py  bottleneck_scaling.py  controlled_depth_width.py  controlled_training.py  dump_tokens.py  export_scopes.py  gemma3_1b_comprehensive.py  generate_croissant.py  gpt2_shuffle_test.py  llama3b_comprehensive_v2.py  llama8b_quick_diagnostic.py  mechanistic_llama.py  mechanistic_mistral.py  medqa_selective.py  mistral7b_comprehensive.py  mistral7b_instruct_full_mps.py  nonlinear_probe.py  phi3_downstream_mps.py  phi3_layer_sweep_mps.py  phi3_mini_comprehensive.py  pythia_1.4b_shuffle.py  pythia_12b_backfill.py  pythia_checkpoint_dynamics.py  qwen14b_instruct.py  qwen14b_v4.py  qwen1_5b_comprehensive_v3.py  qwen1_5b_instruct_v3.py  qwen3b_comprehensive_v3.py  qwen3b_instruct_v3.py  qwen7b_comprehensive_v3.py  qwen7b_instruct_v3.py  rag_hallucination.py  roc_width_sweep.py  run_model.py  run_stream_model.py  runpod_all_nonlinear_7seed.sh  shuffle_test.py  split_bootstrap_gpu.py  truthfulqa_hallucination.py  (+2 more)
scripts/legacy/: README.md  auxiliary_loss.py  gemma3_1b_comprehensive.py  llama1b_comprehensive.py  llama3b_comprehensive_v2.py  llama8b_comprehensive.py  mistral7b_comprehensive.py  phi3_mini_comprehensive.py  qwen14b_instruct.py  qwen14b_v4.py  qwen1_5b_comprehensive_v3.py  qwen1_5b_instruct_v3.py  qwen3b_comprehensive_v3.py  qwen3b_instruct_v3.py  qwen7b_comprehensive_v3.py  qwen7b_instruct_v3.py  wait_and_llama3b.sh
src/: inspect_weights.py  observe.py  observer_variants.py  probe.py  sae_compare.py  scale.py  seed_agreement.py  selective_prediction.py  train.py  transformer_observe.py  utils.py
tests/: conftest.py  test_analysis_primitives.py  test_analysis_smoke.py  test_downstream_protocol.py  test_integration.py  test_intervention.py  test_load_results.py  test_metrics.py  test_paper_values.py  test_probe_sync.py  test_producer_invariants.py  test_results_schema.py  test_script_preflight.py  test_selective_prediction.py  test_smoke_run_model.py  test_statistical_invariants.py
