[project]
name = "nn-observability"
version = "3.0.0"
description = "Architecture configuration determines linear readability of decision quality in transformer activations. Controlled within-family evidence from the Pythia suite and cross-family evaluation across six model families."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Thomas Carmichael"}]
requires-python = ">=3.12,<3.13"
keywords = [
    "transformer interpretability",
    "neural network observability",
    "learned probes",
    "decision quality",
    "confidence controls",
    "architecture-dependent readability",
    "partial correlation",
    "cross-family evaluation",
    "retrieval-augmented generation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "figures*"]
exclude = ["tests*", "scripts*", "results*", "notebooks*", "docs*", "src*"]

[project.urls]
Repository = "https://github.com/tmcarmichael/nn-observability"
Issues = "https://github.com/tmcarmichael/nn-observability/issues"

[project.optional-dependencies]
transformer = [
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "sae-lens>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:var\\(\\).*degrees of freedom:UserWarning",
    "ignore::scipy.stats.ConstantInputWarning",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "C90"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (colon) — compact research code style
    "E702",   # multiple statements on one line (semicolon) — same
    "E741",   # ambiguous variable names (l, x, y) — math code
    "B006",   # mutable default args — false positives with lists in signatures
    "B905",   # zip() without strict= — paired iterators always match in this codebase
    "UP007",  # X | Y union syntax
    "E402",   # module-level import not at top (lazy imports at call sites)
]

[tool.ruff.lint.per-file-ignores]
"scripts/nonlinear_probe.py" = ["I001"]    # inline import gc after del model
"scripts/run_model.py" = ["I001", "E402"]  # lazy imports for optional deps (datasets, transformers)
"scripts/pythia_12b_backfill.py" = ["C901"] # single-pod backfill script, linear flow

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.isort]
known-first-party = ["train", "observe", "probe", "scale", "observer_variants", "seed_agreement", "inspect_weights", "transformer_observe", "sae_compare", "selective_prediction", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
