[project]
name = "nn-observability"
version = "3.4.0"
description = "Whether activation monitoring can catch high-confidence transformer errors depends on architecture: some configurations preserve a linearly readable signal after controlling for output confidence, while others collapse. Code and data for 25 models across 7 families."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Thomas Carmichael"}]
requires-python = ">=3.12"
keywords = [
    "neural network observability",
    "transformer interpretability",
    "decision quality",
    "learned probes",
    "confidence controls",
    "architecture-dependent readability",
    "partial correlation",
    "cross-family evaluation",
    "downstream QA transfer",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*"]
exclude = ["tests*", "scripts*", "results*", "notebooks*", "docs*", "src*"]

[project.urls]
Repository = "https://github.com/tmcarmichael/nn-observability"
Issues = "https://github.com/tmcarmichael/nn-observability/issues"

[project.optional-dependencies]
transformer = [
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "sae-lens>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.15",
    "pre-commit>=4.0",
    "mypy>=1.10",
    "vulture>=2.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:var\\(\\).*degrees of freedom:UserWarning",
    "ignore::scipy.stats.ConstantInputWarning",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "C90"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (colon) — compact research code style
    "E702",   # multiple statements on one line (semicolon) — same
    "E741",   # ambiguous variable names (l, x, y) — math code
    "B006",   # mutable default args — false positives with lists in signatures
    "B905",   # zip() without strict= — paired iterators always match in this codebase
    "UP007",  # X | Y union syntax
    "E402",   # module-level import not at top (lazy imports at call sites)
]

[tool.ruff.lint.per-file-ignores]
"scripts/nonlinear_probe.py" = ["I001"]    # inline import gc after del model
"scripts/run_model.py" = ["I001", "E402"]  # lazy imports for optional deps (datasets, transformers)
"scripts/pythia_12b_backfill.py" = ["C901"] # single-pod backfill script, linear flow
"scripts/vulture_whitelist.py" = ["F821", "B018"] # bare names are vulture's whitelist format

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.isort]
known-first-party = ["train", "observe", "probe", "scale", "observer_variants", "seed_agreement", "inspect_weights", "transformer_observe", "sae_compare", "selective_prediction", "utils"]

[tool.coverage.run]
source = ["analysis", "src"]
omit = [
    "scripts/*",
    "src/transformer_observe.py",
    "src/sae_compare.py",
    "src/scale.py",
    "src/inspect_weights.py",
    "src/observer_variants.py",
    "src/seed_agreement.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "train"
ignore_errors = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
